crates/rome_js_formatter/tests/specs/prettier/js/babel-plugins/function-bind.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
// https://babeljs.io/docs/en/babel-plugin-proposal-function-bind

obj::func
// is equivalent to:
func.bind(obj)

::obj.func
// is equivalent to:
obj.func.bind(obj)

obj::func(val)
// is equivalent to:
func.call(obj, val)

::obj.func(val)
// is equivalent to:
obj.func.call(obj, val)
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,16 +1,18 @@
 // https://babeljs.io/docs/en/babel-plugin-proposal-function-bind
 
-obj::func;
+obj:
+:func
 // is equivalent to:
-func.bind(obj)::obj.func;
+func.bind(obj)
+
+::obj.func
 // is equivalent to:
-obj.func.bind(obj);
+obj.func.bind(obj)
 
-obj::func(val);
+obj::func(val)
 // is equivalent to:
-func
-  .call(obj, val)
+func.call(obj, val)
 
-  ::obj.func(val);
+::obj.func(val)
 // is equivalent to:
-obj.func.call(obj, val);
+obj.func.call(obj, val)
```

# Output

```js
// https://babeljs.io/docs/en/babel-plugin-proposal-function-bind

obj:
:func
// is equivalent to:
func.bind(obj)

::obj.func
// is equivalent to:
obj.func.bind(obj)

obj::func(val)
// is equivalent to:
func.call(obj, val)

::obj.func(val)
// is equivalent to:
obj.func.call(obj, val)
```


# Errors
```
error[SyntaxError]: expected a statement but instead found ':'
  ┌─ function-bind.js:3:5
  │
3 │ obj::func
  │     ^ Expected a statement here


```


